Fixing onclicklisteners, catalogue now in presenter, extracting string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">QShop</string>
+    <string name="order_ten">ORDER TEN</string>
+    <string name="order_one">ORDER ONE</string>
 </resources>
